# affable

./: .gitattributes  .gitignore  .slugignore  AutoInterpreter.hs  AutoScheduler.hs  ChangeLog.md  Command.hs  CommandLine.hs  Concurrency.hs  DESIGN.markdown  DataModel.hs  Exp.hs  LICENSE  Main.hs  Message.hs  MessageTrie.hs  Procfile  README.markdown  Scheduler.hs  Server.hs  SqliteSchedulerContext.hs  Time.hs  Util.hs  Workspace.hs  affable.cabal  app.json  fp-base.cabal  make-db.sql  package-lock.json  package.json  rollup.config.js  stack.yaml  tsconfig.json
src/: AutoInterpreter.hs  AutoScheduler.hs  Command.hs  CommandLine.hs  Completions.hs  DataModel.hs  DatabaseContext.hs  Exp.hs  Main.hs  Message.hs  PostgresAutoSchedulerContext.hs  PostgresCompletionContext.hs  PostgresInit.hs  PostgresSchedulerContext.hs  Primitive.hs  Scheduler.hs  Scripting.hs  Server.hs  SqliteAutoSchedulerContext.hs  SqliteCompletionContext.hs  SqliteInit.hs  SqliteSchedulerContext.hs  Time.hs  Util.hs  Workspace.hs
src/Caching/: AutoSchedulerContext.hs  CompletionContext.hs  Init.hs  SchedulerContext.hs
src/Postgres/: AutoSchedulerContext.hs  CompletionContext.hs  Init.hs  SchedulerContext.hs
src/Sqlite/: AutoSchedulerContext.hs  CompletionContext.hs  Init.hs  SchedulerContext.hs
static/: bundle.js  command-api.js  index.html  parser.js  workspace.css  workspace.js
tests/: properties.hs
tests/scripts/: cek.script  length.script  lengthprim.exp  lengthprim.script  lengthprim2.exp  lengthprim3.script
ts/: command-api.ts  parser.d.ts  parser.js  types.ts  workspace.ts  workspace.tsx
