cabal-version:  2.2

-- The name of the package.
name:                affable

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis: A lab for Q&A systems like Mosaic/Patchwork/HCH/etc. emphasizing dialog, automation, and allowing system components to be replaced via processing within the system, i.e. by Q&A.

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Derek Elkins

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          derek@ought.org

-- A copyright notice.
copyright:  Copyright (c) 2018 Ought Inc.

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md

flag test-properties
  default: True
  manual: True

common deps
  -- Other library packages from which modules are imported.
  build-depends:
    base                >= 4.11 && < 4.12,
    containers          >= 0.5.11 && < 0.6,
    text                >= 1.2.3 && < 1.3,
    transformers        >= 0.5.5 && < 0.6,
    megaparsec          >= 6.5.0 && < 7.0,
    aeson               >= 1.3.1 && < 1.5,
    servant-server      >= 0.14.1 && < 0.15,
    servant-js          >= 0.9.3 && < 0.10,
    warp                >= 3.2.25 && < 3.3,
    sqlite-simple       >= 0.4.16 && < 0.5,
    async               >= 2.2.1 && < 2.3,
    async-pool          >= 0.9.0 && < 0.10,
    haskeline           >= 0.7.4 && < 0.8,
    ansi-terminal       >= 0.8.2 && < 0.9

  -- Modules included in this executable, other than Main.
  other-modules:
    Message,
    Workspace,
    Scheduler,
    Time,
    Command,
    CommandLine,
    Util,
    Server,
    AutoInterpreter,
    Exp,
    Primitive,
    AutoScheduler,
    SqliteAutoSchedulerContext,
    SqliteSchedulerContext

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:
    DeriveGeneric,
    GeneralizedNewtypeDeriving,
    OverloadedStrings,
    FlexibleInstances,
    DataKinds,
    TypeOperators,
    LambdaCase,
    BangPatterns

executable affable
  import: deps
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Base language which the package is written in.
  default-language:    Haskell2010

  hs-source-dirs:      src

-- TODO: Add a library stanza so the test-suite can just import the library.
test-suite properties
    import: deps
    type: exitcode-stdio-1.0
    main-is: properties.hs
    hs-source-dirs:
        tests
        src
    default-language: Haskell2010
    other-extensions: TemplateHaskell
    if !flag(test-properties)
      buildable: False
    else
      -- import: deps -- Argh. https://github.com/haskell/cabal/issues/5563

      build-depends:
        base                >= 4.11 && <4.12,
        QuickCheck,
        test-framework,
        test-framework-quickcheck2,
        test-framework-th,
        testing-feat
